tests/snapshots/examples_fixtures/type_system__failing__198_effect_row_subset_unsatisfied_e422.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/198_effect_row_subset_unsatisfied_e422.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/type_system/failing/198_effect_row_subset_unsatisfied_e422.flx:13:5
   |
13 |     run_needs_io_time(only_io)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     -------------------------- parameter 1 has type `() -> Unit with IO`

   |     -------------------------- this type mismatch is reported here

Note:
  expected parameter type: () -> Unit with IO, Time
  found parameter type: () -> Unit with IO
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `() -> Unit with IO, Time` consistently.


Warning: missing CFG bytecode binding for IR call dest



Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.

Found 1 error and 1 warning.
== stdout ==
<not executed>
